--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -7,3 +7,8 @@ body {
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     font-display: optional;
 }
+
+/* prevents content shifting when vertical scroll bar appears/disappears */
+html {
+    overflow-y: overlay;
+}
